# t-recs-community

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-ubuntu.yml  build-windows.yml
cmake/: functions.cmake
demos/: CMakeLists.txt
demos/ecb_system/: main.cpp
demos/multi_component_multi_system/: main.cpp
demos/multi_component_system/: main.cpp
tests/: CMakeLists.txt
tests/test_utils/: CMakeLists.txt  blank_systems.hpp  complicated_types.hpp
tests/trecs/: CMakeLists.txt
tests/trecs/_tests/: CMakeLists.txt  assignment_overload_test.cpp  unique_ptr_test.cpp  variadic_test.cpp
tests/trecs/allocator_tests/: CMakeLists.txt  allocator_tests.cpp
tests/trecs/archetype_tests/: CMakeLists.txt  archetype_tests.cpp
tests/trecs/byte_pool_tests/: CMakeLists.txt  byte_pool_tests.cpp
tests/trecs/component_manager_tests/: CMakeLists.txt  component_manager_tests.cpp
tests/trecs/entity_component_buffer_tests/: CMakeLists.txt  entity_component_buffer_tests.cpp
tests/trecs/entity_manager_tests/: CMakeLists.txt  entity_manager_tests.cpp
tests/trecs/ext_uid_byte_pool_tests/: CMakeLists.txt  ext_uid_byte_pool_tests.cpp
tests/trecs/ext_uid_object_pool_tests/: CMakeLists.txt  ext_uid_object_pool_tests.cpp
tests/trecs/ext_uid_pool_allocator_tests/: CMakeLists.txt  ext_uid_pool_allocator_tests.cpp
tests/trecs/pool_allocator_tests/: CMakeLists.txt  pool_allocator_tests.cpp
tests/trecs/query_manager_tests/: CMakeLists.txt  query_manager_tests.cpp
tests/trecs/signature_manager_tests/: CMakeLists.txt  signature_manager_tests.cpp
tests/trecs/system_manager_tests/: CMakeLists.txt  system_manager_tests.cpp
trecs/: CMakeLists.txt
trecs/include/: allocator.hpp  archetype.hpp  byte_pool.hpp  component_array_wrapper.hpp  component_manager.hpp  data_pool_interface.hpp  ecs_type_id.hpp  ecs_types.hpp  entity_component_buffer.hpp  entity_manager.hpp  ext_uid_byte_pool.hpp  ext_uid_object_pool.hpp  ext_uid_pool_allocator.hpp  pool_allocator.hpp  pool_allocator_interface.hpp  query_manager.hpp  signature_manager.hpp  system.hpp  system_manager.hpp
trecs/src/: allocator.cpp  component_manager.cpp  entity_component_buffer.cpp  entity_manager.cpp  system_manager.cpp
