add_subdirectory( _tests )
add_subdirectory( allocator_tests )
add_subdirectory( archetype_tests )
add_subdirectory( byte_pool_tests )
add_subdirectory( component_manager_tests )
add_subdirectory( entity_component_buffer_tests )
add_subdirectory( entity_manager_tests )
add_subdirectory( ext_uid_byte_pool_tests )
add_subdirectory( ext_uid_object_pool_tests )
add_subdirectory( query_manager_tests )
add_subdirectory( signature_manager_tests )
add_subdirectory( system_manager_tests )
