add_subdirectory( allocator_tests )
add_subdirectory( archetype_tests )
add_subdirectory( component_manager_tests )
add_subdirectory( entity_manager_tests )
add_subdirectory( ext_uid_pool_allocator_tests )
add_subdirectory( pool_allocator_tests )
add_subdirectory( query_manager_tests )
add_subdirectory( signature_manager_tests )
add_subdirectory( system_manager_tests )
